# ros2_ci

./: Dockerfile  Jenkinsfile  README.md  Roberto_Groza_Evaluation_13112025.txtRoberto_Groza_Evaluation_13112025.txt  start_jenkins.sh
.github/workflows/: jenkins_trigger.yml
fastbot_gazebo/launch/: botbox_world_room.launch.xml
fastbot_msgs/: CMakeLists.txt  package.xml
fastbot_msgs/action/: NavigateToPose.action
fastbot_waypoints/: CMakeLists.txt  README.md  package.xml
fastbot_waypoints/src/: fastbot_action_server.cpp
fastbot_waypoints/test/: test_end_position.cpp  test_end_rotation.cpp
