<package format="3">
  <name>fastbot_waypoints</name>
  <version>0.0.1</version>
  <description>Waypoint navigation for Fastbot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fastbot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
